--- a/css/main.css
+++ b/css/main.css
@@ -14,13 +14,14 @@ main {
 
 .board-container {
   display: flex;
+  flex-direction: column;
   gap: 10px;
   margin-bottom: 40px;
 }
 
 .board-row {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 10px;
 }
 
